<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="80sp"
            android:src="@drawable/shop_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80sp"
            android:text="@string/intro_first_line"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkRed"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_second_line"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorRed"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnloginbg"
            android:layout_marginTop="70sp"
            android:text="@string/btn_login"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:id="@+id/btnUserLogin"
            />
        <Button
            android:id="@+id/btnUserSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnsignupbg"
            android:layout_marginTop="10sp"
            android:textSize="20sp"
            android:text="@string/btn_user_signup"
            android:textColor="@color/colorWhite"/>


    </LinearLayout>

</LinearLayout>