<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenbg"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="40sp"
            android:src="@drawable/shop_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/registration_message"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkRed"
            android:layout_marginBottom="40sp"
            android:textSize="22sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            >



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/userFirstNameWrapper"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userFirstName"
                android:inputType="text"
                android:hint="@string/first_name"
                android:textColor="@color/colorRed"
                android:textSize="18sp"
                android:textColorHint="@color/colorRed"
                />

        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:id="@+id/userLastNameWrapper">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userLastName"
                    android:inputType="text"
                    android:hint="@string/last_name"
                    android:textSize="18sp"
                    android:textColorHint="@color/colorRed"
                    >

                </EditText>


            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:id="@+id/userEmailAddress"
    >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"
        android:textSize="18sp"
        android:textColorHint="@color/colorRed"
        >

    </EditText>

    </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/passwordWrapper"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userPassword"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textSize="18sp"
                    android:textColorHint="@color/colorRed"
                    >

                </EditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/userConfPasswordWrapper"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userConfPassword"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    android:textColorHint="@color/colorRed"
                    android:hint="@string/confirm_password">

                </EditText>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userContactNoWrapper"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userContactNumber"
                android:inputType="phone"
                android:textSize="18sp"
                android:textColorHint="@color/colorRed"
                android:hint="@string/contact_number"
                >
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            android:text="@string/btn_register"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:background="@drawable/btnloginbg"
            >
        </Button>

    </LinearLayout>

</LinearLayout>